--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const year = new Date();
 
 <Section>
 	<footer class="text-center">
-		© {year.getFullYear()} - <a class="underline hover:text-orange-600" href="/imprint/">Imprint</a> - made with
-		♥️ by <a class="underline hover:text-orange-600" href="http://nicdun.dev" target="_blank">kzares</a> 
+		© {year.getFullYear()} - <a class="underline text-orange-600" href="/imprint/">Imprint</a> - made with
+		♥️ by <a class="underline text-orange-600" href="http://nicdun.dev" target="_blank">kzares</a> 
 	</footer>
 </Section>
