created branch list

--- a/src/components/BranchList.astro
+++ b/src/components/BranchList.astro
@@ -8,8 +8,8 @@ const paths = await getCollection("paths");
 ---
     <Section>
     <div class="flex flex-col gap-1 py-3 pb-5 px-2">
-        <h1 class="dark:text-gray-600 text-gray-700  text-[60px] font-bold">Coding Branches</h1>
-        <p class="text-sm font-semibold font-mono max-w-[600px]">You need first to choose a brnach Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, dolorem?</p>
+        <h1 class="dark:text-gray-600 text-gray-700  text-[60px] font-bold">Coding <span class="text-orange-600">Branches</span></h1>
+        
     </div>
 
     <div class="flex flex-wrap gap-3 mx-auto ">
