added selected route to header

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ const stephs = [
     {
         name: "Programming Branch",
         image: "/images/branch.svg",
-        redirect: "/branches"
+        redirect: "/paths"
     },
     {
         name: "Coding Language",
