--- a/src/pages/languages.astro
+++ b/src/pages/languages.astro
@@ -1,7 +1,9 @@
 ---
+import LanguageList from "@components/LanguageList.astro";
 import BaseLayout from "@layouts/BaseLayout.astro";
 
 ---
 
 <BaseLayout head={{title:"", description:""}} >
+    <LanguageList />
 </BaseLayout>
