changes on rendering method

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,7 @@
 ---
-import BaseLayout from "@layouts/BaseLayout.astro";
-import Hero from "@components/Hero.astro"
-import BranchList from "@components/BranchList.astro";
-import { AppConfig } from "@config";
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import Hero from "@/components/Hero.astro"
+import { AppConfig } from "@/config";
 
 const { title } = AppConfig;
 const { description } = AppConfig;
