--- a/src/pages/paths.astro
+++ b/src/pages/paths.astro
@@ -1,6 +1,6 @@
 ---
-import BranchList from "@components/react/BranchList";
-import BaseLayout from "@layouts/BaseLayout.astro";
+import BranchList from "@/components/react/BranchList";
+import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
 <BaseLayout head={{title:"", description:""}} >
