--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,30 +1,31 @@
 ---
-import SelectedPath from './react/SelectedPath';
-import Section from './Section.astro';
+import SelectedPath from "./react/SelectedPath";
+import Section from "./Section.astro";
 ---
 
 <Section>
-	<div class="flex flex-col gap-8 border-b pb-5">
-		<div class="flex justify-between z-10 relative">
-			<div class="text-3xl font-bold">
-				<a href="/"
-					> <span class="pr-2 text-2xl text-gray-500">{'<'}</span>paper<span
-						class="text-orange-600">.</span
-					>notes<span class="pl-2 text-2xl text-gray-500">{'/>'}</span></a
-				>
-			</div>
-			<div class="flex items-center">
-				<nav>
-					<ul class="hidden flex-row sm:flex">
-						<li><a href="/languages" class="mr-3 hover:text-orange-600">LANGUAGES</a></li>
-						<li><a href="/paths" class="hover:text-orange-600">PATHS</a></li>
-					</ul>
-				</nav>
-				
-			</div>
-		</div>
+  <div class="flex flex-col gap-8 border-b pb-5">
+    <div class="flex justify-between z-10 relative">
+      <div class="text-[30px] font-bold">
+        <a href="/">
+          <span class="pr-2 text-xl text-gray-500">{"<"}</span>paper<span
+            class="text-orange-600">.</span
+          >notes<span class="pl-2 text-2xl text-gray-500">{"/>"}</span></a
+        >
+      </div>
+      <div class="flex items-center">
+        <nav>
+          <ul class="flex-row flex gap-4">
+            <li>
+              <a href="/languages" class="mr-3 hover:text-orange-600"
+                >LANGUAGES</a>
+            </li>
+            <li><a href="/paths" class="hover:text-orange-600">PATHS</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
-		<SelectedPath client:load />
-	</div>
+    <SelectedPath client:load />
+  </div>
 </Section>
-
