--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,8 @@
 ---
-import Footer from '@components/Footer.astro';
-import Navbar from '@components/Navbar.astro';
+import Footer from '@/components/Footer.astro';
+import Navbar from '@/components/Navbar.astro';
 import { ViewTransitions } from 'astro:transitions';
-import { AppConfig } from '@config';
+import { AppConfig } from '@/config';
 
 export interface Props {
 	head: {
