--- a/src/pages/languages.astro
+++ b/src/pages/languages.astro
@@ -1,9 +1,13 @@
 ---
-import LanguageList from "@/components/react/LanguageList";
+import RenderCardList from "@/components/RenderCardList.astro";
 import BaseLayout from "@/layouts/BaseLayout.astro";
-
 ---
 
-<BaseLayout head={{title:"", description:""}} >
-    <LanguageList client:load />
+<BaseLayout head={{ title: "", description: "" }}>
+  <RenderCardList
+    options={{
+      title: "Programming languages",
+      collection: "languages",
+    }}
+  />
 </BaseLayout>
