--- a/src/components/RenderCardList.astro
+++ b/src/components/RenderCardList.astro
@@ -3,6 +3,7 @@ import { getCollection } from "astro:content";
 import Section from "./Section.astro";
 import Card from "./Card.astro";
 import type { CollectionEntry } from "astro:content";
+import SelectedHeader from "./react/SelectedHeader";
 
 export type Props = {
   options: {
@@ -19,27 +20,28 @@ let renderItems: any = [];
 if (!options.filter) renderItems = allItems;
 else {
   // first check the type of data we are checking
-  if(options.collection === "paths") {
-    renderItems = allItems.filter((item) => item.data.relatedLanguages.includes(options.filter) )
-  }else {
-    renderItems = allItems.filter((item) => item.data.relatedBranches.includes(options.filter) )
+  if (options.collection === "paths") {
+    renderItems = allItems.filter((item) =>
+      item.data.relatedLanguages.includes(options.filter)
+    );
+  } else {
+    renderItems = allItems.filter((item) =>
+      item.data.relatedBranches.includes(options.filter)
+    );
   }
 }
-
-const splitedTitle = options.title.split(" ");
 ---
 
 <Section>
-  <div class="flex flex-col gap-1 py-3 pb-5 px-2">
-    <h1 class="dark:text-gray-600 text-gray-700 text-[60px] font-bold">
-      {splitedTitle[0]}
-      <span class="text-orange-600"> {splitedTitle[1]} </span>
-    </h1>
-  </div>
+  <SelectedHeader
+    filter={options.filter}
+    collection={options.collection}
+    selectedTitle={options.title}
+  />
 
   <div class="flex flex-wrap gap-3 mx-auto">
     {
-      renderItems.map(({ data } : { data: any}) => (
+      renderItems.map(({ data }: { data: any }) => (
         <Card collection={options.collection} data={data} />
       ))
     }
